# bsos

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh  build_release_macos.sh  build_release_vs.bat  setup-bsos.sh  version.inc
.github/workflows/: build_all.yml  build_deps.yml  build_linux_appimage.yml  build_linux_portable.yml  build_macos_bridge.yml  build_windows_bridge.yml  my_build_all.yml
.github/workflows_disabled/: publish_release.yml
cmake/modules/: FindEigen3.cmake  MacOSXBundleInfo.plist.in
localization/i18n/: OrcaSlicer.pot
localization/i18n/ca/: OrcaSlicer_ca.po
localization/i18n/cs/: OrcaSlicer_cs.po
localization/i18n/de/: OrcaSlicer_de.po
localization/i18n/en/: OrcaSlicer_en.po
localization/i18n/es/: OrcaSlicer_es.po
localization/i18n/fr/: OrcaSlicer_fr.po
localization/i18n/hu/: OrcaSlicer_hu.po
localization/i18n/it/: OrcaSlicer_it.po
localization/i18n/ja/: OrcaSlicer_ja.po
localization/i18n/ko/: OrcaSlicer_ko.po
localization/i18n/lt/: OrcaSlicer_lt.po
localization/i18n/nl/: OrcaSlicer_nl.po
localization/i18n/pl/: OrcaSlicer_pl.po
localization/i18n/pt_BR/: OrcaSlicer_pt_BR.po
localization/i18n/ru/: OrcaSlicer_ru.po
localization/i18n/sv/: OrcaSlicer_sv.po
localization/i18n/th/: OrcaSlicer_th.po
localization/i18n/tr/: OrcaSlicer_tr.po
localization/i18n/uk/: OrcaSlicer_uk.po
localization/i18n/vi/: OrcaSlicer_vi.po
localization/i18n/zh_CN/: OrcaSlicer_zh_CN.po
localization/i18n/zh_TW/: OrcaSlicer_zh_TW.po
resources/: Icon.icns
resources/profiles/: Anycubic.json  BBL.json
resources/profiles/Anycubic/filament/: Anycubic ABS @Anycubic Kobra S1 Max 0.25 nozzle.json  Anycubic ABS @Anycubic Kobra S1 Max 0.4 nozzle.json  Anycubic ABS @Anycubic Kobra S1 Max 0.6 nozzle.json  Anycubic ABS @Anycubic Kobra S1 Max 0.8 nozzle.json  Anycubic ASA @Anycubic Kobra S1 Max 0.25 nozzle.json  Anycubic ASA @Anycubic Kobra S1 Max 0.4 nozzle.json  Anycubic ASA @Anycubic Kobra S1 Max 0.6 nozzle.json  Anycubic ASA @Anycubic Kobra S1 Max 0.8 nozzle.json  Anycubic PA @Anycubic Kobra S1 Max 0.4 nozzle.json  Anycubic PA @Anycubic Kobra S1 Max 0.6 nozzle.json  Anycubic PA @Anycubic Kobra S1 Max 0.8 nozzle.json  Anycubic PA6-CF @Anycubic Kobra S1 Max 0.4 nozzle.json  Anycubic PA6-CF @Anycubic Kobra S1 Max 0.6 nozzle.json  Anycubic PA6-CF @Anycubic Kobra S1 Max 0.8 nozzle.json  Anycubic PAHT-CF @Anycubic Kobra S1 Max 0.4 nozzle.json  Anycubic PAHT-CF @Anycubic Kobra S1 Max 0.6 nozzle.json  Anycubic PAHT-CF @Anycubic Kobra S1 Max 0.8 nozzle.json  Anycubic PC @Anycubic Kobra S1 Max 0.4 nozzle.json  Anycubic PC @Anycubic Kobra S1 Max 0.6 nozzle.json  Anycubic PC @Anycubic Kobra S1 Max 0.8 nozzle.json  Anycubic PC-CF @Anycubic Kobra S1 Max 0.4 nozzle.json  (+51 more)
resources/web/data/: text.js
resources/web/guide/1/: index.html
resources/web/model/: index.html  model.css
scripts/: appimage_lib_policy.sh  run_gettext.bat  run_gettext.sh
scripts/flatpak/: com.orcaslicer.BambuStudio.metainfo.xml  com.orcaslicer.BambuStudio.yml  entrypoint  setup_env_ubuntu24.04.sh
scripts/linux.d/: arch  cachyos  debian
scripts/msix/: AppxManifest.xml  build_msix.ps1
shared/slicer_linux_runtime_core/: CMakeLists.txt  RuntimeAuthPayload.hpp  RuntimeCoreCallbackQueue.cpp  RuntimeCoreCallbackQueue.hpp  RuntimeCoreFrame.cpp  RuntimeCoreFrame.hpp  RuntimeCoreJson.hpp  RuntimeCoreMethodManifest.cpp  RuntimeCoreMethodManifest.hpp  RuntimeCoreSubprocess.cpp  RuntimeCoreSubprocess.hpp  RuntimeCoreTypes.hpp  method_manifest.json
src/: CMakeLists.txt
src/libslic3r/: AppConfig.cpp  GCode.cpp  Model.cpp  Model.hpp  ModelArrange.cpp  Print.cpp  PrintConfig.cpp  ProjectTask.hpp  utils.cpp
src/libslic3r/Format/: bbs_3mf.cpp  bbs_3mf.hpp
src/slic3r/: CMakeLists.txt
src/slic3r/GUI/: AVVideoDecoder.cpp  AVVideoDecoder.hpp  AboutDialog.cpp  ConfigWizard.cpp  DesktopIntegrationDialog.cpp  DeviceManager.cpp  DeviceManager.hpp  GCodeViewer.hpp  GLCanvas3D.cpp  GUI_App.cpp  GUI_App.hpp  MainFrame.cpp  MediaFilePanel.cpp  MediaFilePanel.h  MediaPlayCtrl.cpp  Monitor.cpp  NetworkPluginDialog.cpp  Plater.cpp  Preferences.cpp  SelectMachine.cpp  SelectMachine.hpp  SendMultiMachinePage.cpp  SendSystemInfoDialog.cpp  SendToPrinter.cpp  SendToPrinter.hpp  StatusPanel.cpp  StatusPanel.hpp  UpgradePanel.cpp  UpgradePanel.hpp  wxMediaCtrl2.h  wxMediaCtrl3.cpp  wxMediaCtrl3.h
src/slic3r/Utils/: BBLCloudServiceAgent.cpp  BBLNetworkPlugin.cpp  BBLNetworkPlugin.hpp  BBLPrinterAgent.cpp  BBLPrinterAgent.hpp  CrealityPrint.cpp  FileTransferUtils.cpp  Http.cpp  NetworkAgent.cpp  NetworkAgent.hpp  NetworkAgentFactory.cpp  OrcaCloudServiceAgent.cpp  OrcaCloudServiceAgent.hpp  PresetUpdater.cpp  Process.cpp  bambu_networking.hpp
src/slic3r/Utils/SlicerLinuxRuntime/: CMakeLists.txt  SlicerLinuxRuntimeCompat.hpp  SlicerLinuxRuntimeConfig.cpp  SlicerLinuxRuntimeConfig.hpp  SlicerLinuxRuntimeEventPump.cpp  SlicerLinuxRuntimeEventPump.hpp  SlicerLinuxRuntimeForwarderExports.cpp  SlicerLinuxRuntimeForwarderState.cpp  SlicerLinuxRuntimeForwarderState.hpp  SlicerLinuxRuntimeLauncher.hpp  SlicerLinuxRuntimeLauncher_linux.cpp  SlicerLinuxRuntimeLauncher_mac.mm  SlicerLinuxRuntimeLauncher_win.cpp  SlicerLinuxRuntimeRpcClient.cpp  SlicerLinuxRuntimeRpcClient.hpp  SlicerLinuxRuntimeRpcProtocol.cpp  SlicerLinuxRuntimeRpcProtocol.hpp
tests/fff_print/: test_skirt_brim.cpp
tools/slicer_linux_runtime/macos/: install_runtime_macos.sh  set_runtime_network_profile_macos.sh  slicer_linux_runtime_lima_instance.txt  verify_runtime_macos.sh
tools/slicer_linux_runtime/release/: assemble_windows_runtime_bundle.ps1
tools/slicer_linux_runtime/rootfs/: build_windows_wsl_rootfs.ps1  build_windows_wsl_rootfs.sh
tools/slicer_linux_runtime/wsl/: install_runtime.ps1  probe_lan.ps1  slicer_linux_runtime_component_dir.txt  slicer_linux_runtime_host  slicer_linux_runtime_wsl_distro.txt  slicer_linux_runtime_wsl_run_host.sh  verify_runtime.ps1
tools/slicer_linux_runtime_host/: CMakeLists.txt  LinuxRuntimeHost.cpp  LinuxRuntimeHost.hpp  main.cpp  package_linux_host_runtime.sh  slicer-linux-runtime-host-wrapper
(+180 files in other folders)
